# auto-Sorting_machine

./: .gitmodules  CMakeLists.txt  README.md  auto_sorting_machine.h  main.cpp
data/train/: train.json
includes/: auto_sorting_machine.h  frontend_auto_sm.h  tools.h  trainer.h
includes/tools/: json.h  tools.h
src/: frontend_auto_sm.cpp  main.cpp  tools.cpp
tools/: tools.cpp
train/: preprocessing.cpp
